# OpenGLThings

./: .cproject  .project  .travis.yml  CMakeLists.txt
src/: glfw_hello_coloured_cube.cpp  shader.cpp
